# rust-gRPC-r2

./: .gitignore  Cargo.toml  LICENSE  README.md
grpc-client/: Cargo.toml
grpc-client/src/: main.rs
grpc-server/: Cargo.toml
grpc-server/src/: main.rs
proto/: hello.proto
proto-defs/: Cargo.toml  build.rs
proto-defs/src/: lib.rs
