[workspace]
members = [
    "proto-defs", 
    "grpc-server",
    "grpc-client"
]
resolver = "3"

[workspace.dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
# prost-derive = "0.14"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"]}
proto-defs = {path = "./proto-defs"}


